# edutech-platform

./: .env.example  .env.production  .gitignore  README.md  WHATSAPP_COMPLETE_INTEGRATION_GUIDE.md  WHATSAPP_DEVELOPER_INSTRUCTIONS.md  code_dump.sh  code_dump.txt  docker-compose.yml  test_bot.py  test_bot_with_logs.py  test_production.py  test_telegram_integration.py
AI/: Build.md  Features.md  Rules.md  WA.md
backend/: .env.example  .flake8  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/src/: main.py
backend/src/api/: documents.py  telegram.py  whatsapp.py
backend/src/core/: config.py
backend/src/edutech_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/src/middleware/: __init__.py  error_handler.py
backend/src/models/: __init__.py  document.py  telegram.py  user.py  whatsapp.py
backend/src/schemas/: __init__.py  document.py  telegram.py  whatsapp.py
backend/src/services/: document_service.py  gemini_service.py  telegram_bot.py
backend/src/utils/: auth.py  database.py  rate_limiter.py
backend/uploads/: .gitkeep
database/: init.sql
database/migrations/: 002_telegram_integration.sql  003_document_chat.sql  004_create_whatsapp_users.sql  004_fix_metadata_columns.sql  005_add_cached_ai_content.sql
frontend/: .eslintrc.json  .prettierrc.json  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: globals.css  middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: auth.ts  rbac.ts
shared/types/: index.ts  package.json
(+34 files in other folders)
